@@ -4,6 +4,8 @@ import dev.emi.emi.EmiPort;
 import dev.emi.emi.EmiRenderHelper;
 import dev.emi.emi.runtime.EmiDrawContext;
 import org.lwjgl.opengl.GL11;
+import shims.java.com.mojang.blaze3d.systems.RenderSystem;
+import shims.java.net.minecraft.client.gui.DrawContext;
 import shims.java.net.minecraft.client.gui.tooltip.TooltipComponent;
 import shims.java.net.minecraft.client.gui.widget.ButtonWidget;
 import shims.java.net.minecraft.client.util.math.MatrixStack;
@@ -63,19 +65,17 @@ public class SizedButtonWidget extends ButtonWidget {
 		}
 		return v;
 	}
-	
+
 	@Override
-	public void renderButton(MatrixStack matrices, int mouseX, int mouseY, float delta) {
-		EmiDrawContext context = EmiDrawContext.instance();
-		glEnable(GL_DEPTH_TEST);
+	public void renderWidget(DrawContext raw, int mouseX, int mouseY, float delta) {
+		EmiDrawContext context = EmiDrawContext.wrap(raw);
+		RenderSystem.enableDepthTest();
 		context.drawTexture(texture, this.x, this.y, getU(mouseX, mouseY), getV(mouseX, mouseY), this.width, this.height);
 		if (this.isMouseOver(mouseX, mouseY) && text != null && this.active) {
 			context.push();
-			GL11.glColor4f(1F, 1F, 1F, 1F);
-			glDisable(GL_DEPTH_TEST);
+			RenderSystem.disableDepthTest();
 			Minecraft client = Minecraft.getMinecraft();
-			EmiRenderHelper.drawTooltip(client.currentScreen, context,
-					text.get().stream().map(EmiPort::ordered).map(TooltipComponent::of).collect(Collectors.toList()), mouseX, mouseY);
+			EmiRenderHelper.drawTooltip(client.currentScreen, context, text.get().stream().map(EmiPort::ordered).map(TooltipComponent::of).toList(), mouseX, mouseY);
 			context.pop();
 		}
 	}
